<resources>
    <string name="app_name">부저부저</string>

    <!--sendbird-->
    <string name="str_sendbird_login_err">서버 연결에 실패하였습니다.</string>
    <string name="str_sendbird_update_nickname_err">정보 업데이트 실패</string>
    <string name="str_sendbird_chat_hint">메시지를 입력하세요</string>
    <string name="str_sendbird_chat_btn">전송</string>
    <string name="str_sendbird_message_sending">전송완료</string>
    <string name="str_sendbird_chat_failed">채팅방 열기 실패</string>
    <string name="str_sendbird_message_failed">전송실패</string>
    <string name="str_sendbird_view_member">대화상대 보기</string>
    <string name="str_sendbird_invite_members">대화상대 초대</string>
    <string name="str_sendbird_invite_member_btn">초대</string>
    <string name="str_sendbird_resend_message">재전송</string>
    <string name="str_sendbird_delete_message">삭제</string>
    <string name="str_sendbird_download">다운로드</string>
    <string name="str_sendbird_cancel">취소</string>
    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="all_group_channels">Group Channels</string>

    <string name="create_open_channel">Create Open Channel</string>
    <string name="invite_member">Invite members</string>
    <string name="member_list">Members</string>
    <string name="create_group_channel">Create Group Channel</string>

    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>

    <!--findmyinfo-->
    <string name="infocheck">계정정보 조회</string>
    <string name="findeid">아이디 찾기</string>
    <string name="emailex">가입시 등록한 이메일 주소</string>
    <string name="next">다음</string>
    <string name="pwdfind">가입시 등록한 이메일 주소</string>
    <string name="infoemail">계정정보 전송 완료</string>
    <string name="infopwd">비밀번호 전송완료</string>
    <string name="infoemail2">해당 이메일로 아이디 정보가 전송되었습니다. 확인 후 로그인해 주세요</string>
    <string name="infopwd2">가입시 등록한 이메일로 임시비밀번호가 전송되었습니다.</string>
    <string name="confirm">확인</string>


    <string name="authnum">인증번호</string>


    <!--membership-->
    <string name="buzzer_buzzer">회원가입</string>
    <string name="inputphonenum">휴대폰 번호 입력</string>
    <string name="dupbtn">중복확인</string>
    <string name="profile_pwd">비밀번호 입력</string>
    <string name="profile_pwd1">비밀번호 확인 입력</string>
    <string name="emailreg">이메일 등록</string>
    <string name="joininfo">휴대폰 번호 변경,비밀번호 분실 등 계정 정보 처리시 필요한 정보입니다.</string>
    <string name="emailaddress">이메일 주소</string>
    <string name="regiconfirm">가입완료</string>
    <string name="inputconfirm">입력을 다시 확인해주세요!!!</string>
    <string name="close">닫기</string>
    <string name="myprofilesetting">내 프로필 설정</string>
    <string name="phonebook">전화번호</string>
    <string name="buzzerid">Buzzer Buzzer ID</string>
    <string name="buzzer_account">Buzzer BUzzer 계정</string>
    <string name="nickname">닉네임</string>
    <string name="changeid">변경할 아이디</string>
    <string name="statemsg">상태메세지</string>
    <string name="changemsg">변경할 상태메세지</string>
    <string name="mylocation">내 기본 위치</string>
    <string name="mylocationinfo">이 위치를 토대로 만나기 힘든 친구들 우선적으로 알려드립니다.</string>
    <string name="gpssetting">위치설정하기</string>
    <string name="settings">상세설정</string>


    <!--naver-->
    <string name="str_done">완료</string>

    <!--allsettings-->
    <string name="setting1">친구</string>
    <string name="setting2">친구 추천 허용</string>
    <string name="setting3">내 주변 유저 검색 허용</string>
    <string name="setting4">내 위치 차단 친구 관리</string>
    <string name="setting5">내 위치 차단 팔로우 관리</string>
    <string name="setting6">알림</string>
    <string name="setting7">전체 알람 받기</string>
    <string name="setting8">채팅 미리보기</string>
    <string name="long_time_no_see">Long Time No See 푸쉬 알림</string>
    <string name="setting9">실행 중 채팅 소리 알림</string>
    <string name="setting10">스토어</string>
    <string name="setting11">이용권 조회</string>
    <string name="setting12">로그인 계정</string>
    <string name="setting13">비밀번호 변경</string>
    <string name="setting14">휴대폰 변경</string>
    <string name="setting15">탈퇴하기</string>
    <string name="setting16">버전정보</string>
    <string name="setting17">회원약관</string>
    <string name="setting18">개인정보 취급방침</string>
    <string name="setting19">위치기반서비스 이용 약관</string>

    <!--withdraw-->
    <string name="withdraw">탈퇴하기</string>
    <string name="withdraw1">삭제된 계정의 모든 정보는 삭제됩니다.\n \t \t \t \t 정말로 탈퇴하시겠습니까?</string>
    <string name="withdraw2">탈퇴 사유를 알려주세요</string>
    <string name="withdraw3">어플리케이션의 에러가 많다.</string>
    <string name="withdraw4">사용방법이 어렵다</string>
    <string name="withdraw5">오차가 커서 신뢰성이 떨어진다</string>
    <string name="withdraw6">불량회원이 많다.</string>
    <string name="withdraw7">서비스를 이용하는 동안 불쾌감을 느꼈다</string>
    <string name="withdraw8">기타 의견</string>
    <string name="withdraw9">탈퇴하기</string>

    <!--purchase-->
    <string name="purchase1">이용권 조회 및 구매</string>
    <string name="purchase2">현재 이용권</string>
    <string name="purchase3">이용권 구매하기</string>
    <string name="purchase4">3회권</string>
    <string name="purchase5">10회권</string>
    <string name="purchase6">20회권</string>
    <string name="purchase7">50회권</string>
    <string name="purchase8">US $1</string>
    <string name="purchase9">US $3</string>
    <string name="purchase10">US $5</string>
    <string name="purchase11">US $10</string>


    <!--gpspol-->
    <string name="gpspoli1">위치기반서비스 이용약관</string>
    <!--membershippol-->
    <string name="membershippoli">회원 약관</string>
    <!--privacypoli-->
    <string name="privacypoli">개인정보 취급방침</string>
    <string name="versioninfo">버전 정보</string>
    <string name="version">현재 버전</string>
    <string name="newversion">업데이트하기</string>
    <string name="osversion">지원환경 6.0 마시멜로우 이상</string>
    <string name="mygpsblock">내위치 차단</string>
    <string name="frienddel">친구삭제</string>


    <string name="search_input">검색창에 입력해주세요.</string>
    <string name="setting20">로그아웃</string>
    <string name="findpwd">비밀번호 찾기</string>
    <string name="change_nickname">변경할 닉네임</string>


    <string-array name="planets_array">
        <item>실시간</item>
        <item>현재위치고정</item>
        <item>기본위치</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot"><u>forgot?</u></string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="basic_location_text">기본 위치를 기준으로\n만나기 힘든 친구를 우선 연결합니다.</string>

    <string name="action_settings">Settings</string>

    <string name="follow_text"><font fgcolor='#27a2ff'>팔로우</font></string>
    <string name="profile_text"><font fgcolor='#27a2ff'>프로필 사진</font></string>
</resources>
